# pytest-feature

./: README.md  pyproject.toml
features/: plugin.feature
features/steps/: test_plugin.py
pytest_feature/: __init__.py  plugin.py  steps.py
